syntax = "proto3";

package docker.cluster.api;

import "docker/cluster/specs/specs.proto";
import "docker/cluster/objects/objects.proto";
import "gogoproto/gogo.proto";

// Cluster defines the RPC methods for controlling a cluster.
//
// Other options for naming this interface:
//
// 	- "Control", since this controls a swarm cluster
// 	- "User" because it is user facing.
service Cluster {
	rpc GetNode(GetNodeRequest) returns (GetNodeResponse) {}
	rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}
	rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeResponse) {}

	rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
	rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
	rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
	rpc RemoveTask(RemoveTaskRequest) returns (RemoveTaskResponse) {}

	rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
	rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {}
	rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {}
	rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse) {}
	rpc RemoveJob(RemoveJobRequest) returns (RemoveJobResponse) {}

	rpc GetNetwork(GetNetworkRequest) returns (GetNetworkResponse) {};
	rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse) {};
	rpc CreateNetwork(CreateNetworkRequest) returns (CreateNetworkResponse) {};
	rpc RemoveNetwork(RemoveNetworkRequest) returns (RemoveNetworkResponse) {};

	rpc GetVolume(GetVolumeRequest) returns (GetVolumeResponse) {};
	rpc ListVolumes(ListVolumesRequest) returns (ListVolumesResponse) {};
	rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeResponse) {};
	rpc RemoveVolume(RemoveVolumeRequest) returns (RemoveVolumeResponse) {};
}

message ListOptions {
	// TODO(vieux): Replace `query` with more powerful selectors.
	string query = 1;
}

message GetNodeRequest {
	string node_id = 1 [(gogoproto.customname) = "NodeID"];
}

message GetNodeResponse {
	docker.cluster.objects.Node node = 1;
}

message ListNodesRequest {
	ListOptions options = 1;
}

message ListNodesResponse {
	repeated objects.Node nodes = 1;
}

// UpdateNodeRequest requests an update to the specified node. This may be used
// to request a new availability for a node, such as PAUSE. Invalid updates
// will be denied and cause an error.
message UpdateNodeRequest {
	string node_id = 1 [(gogoproto.customname) = "NodeID"];
	specs.NodeSpec spec = 2;
}

message UpdateNodeResponse {
	objects.Node node = 1;
}

message CreateTaskRequest {
	specs.JobSpec spec = 1;
}

message CreateTaskResponse {
	objects.Task task = 1;
}

message GetTaskRequest {
	string task_id = 1 [(gogoproto.customname) = "TaskID"];
}

message GetTaskResponse {
	objects.Task task = 1;
}

message RemoveTaskRequest {
	string task_id = 1 [(gogoproto.customname) = "TaskID"];
}

message RemoveTaskResponse {
}

message ListTasksRequest {
}

message ListTasksResponse {
	repeated objects.Task tasks = 1;
}

message CreateJobRequest {
	specs.JobSpec spec = 1;
}

message CreateJobResponse {
	objects.Job job = 1;
}

message GetJobRequest {
	string job_id = 1 [(gogoproto.customname) = "JobID"];
}

message GetJobResponse {
	objects.Job job = 1;
}

message UpdateJobRequest {
	string job_id = 1 [(gogoproto.customname) = "JobID"];
	specs.JobSpec spec = 2;
}

message UpdateJobResponse {
	objects.Job job = 1;
}

message RemoveJobRequest {
	string job_id = 1 [(gogoproto.customname) = "JobID"];
}

message RemoveJobResponse {
}

message ListJobsRequest {
	ListOptions options = 1;
}

message ListJobsResponse {
	repeated objects.Job jobs = 1;
}

message CreateNetworkRequest {
	specs.NetworkSpec spec = 1;
}

message CreateNetworkResponse {
	objects.Network network = 1;
}

message GetNetworkRequest {
	string name = 1;
	string network_id = 2 [(gogoproto.customname) = "NetworkID"];
}

message GetNetworkResponse {
	objects.Network network = 1;
}

message RemoveNetworkRequest {
	string name = 1;
	string network_id = 2 [(gogoproto.customname) = "NetworkID"];
}

message RemoveNetworkResponse {}

message ListNetworksRequest {}

message ListNetworksResponse {
	repeated objects.Network networks = 1;
}

message CreateVolumeRequest {
	specs.VolumeSpec spec = 1;
}

message CreateVolumeResponse {
	objects.Volume volume = 1;
}

message GetVolumeRequest {
	string volume_id = 1 [(gogoproto.customname) = "VolumeID"];
}

message GetVolumeResponse {
	objects.Volume volume = 1;
}

message RemoveVolumeRequest {
	string volume_id = 1 [(gogoproto.customname) = "VolumeID"];
}

message RemoveVolumeResponse {}

message ListVolumesRequest {}

message ListVolumesResponse {
	repeated objects.Volume volumes = 1;
}
